# Midterm_Project_IBM_HR_Analytic_Attrition

./: Dockerfile  LICENSE  README.md  Streamlit.py  check.ipynb  notebook.ipynb  predict.py  predict_test0.py  predict_test1.py  preprocessed_data.csv  pyproject.toml  requirements.txt  service.py  train.py
